# agentic-public-health-early-warning

./: .gitignore  README.md  command.md  get_json_sample.py  pyproject.toml  requirements.txt  test_predict.py
app/: dependencies.py  main.py  schemas.py
app/api/: errors.py  health.py  routes.py
artifacts/: ensemble_bundle.joblib  feature_schema.joblib  model_card.json  production_tuned_lightgbm.joblib  production_tuned_xgboost.joblib  robust_scaler.joblib  target_scaler.joblib
core/: exceptions.py
docs/analytical_reports/: 01_eda_findings.md  02_feature_engineering_report.md
docs/developmental_logs/: log_2026_Q2.md
docs/technical_design/: data_schema.md
features/: feature_builder.py  feature_registry.py  feature_schema.py  feature_validator.py  missing_feature_checker.py
models/: predictor.py
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_baseline_models.ipynb  04_model_tuning_lightgbm.ipynb  04_model_tuning_xgboost.ipynb  05_final_training_and_evaluation_.ipynb
scripts/: get_json_sample.py  json.md
services/: alert_service.py  explanation_service.py  inference_service.py
src/agents/: base_agent.py  base_llm_agent.py  explanation_agent.py  recommendation_agent.py
src/core/: exceptions.py  logging_config.py  prediction_state.py  risk_levels.py
src/features/: feature_schema.py  feature_validator.py
src/graphs/: graph_dependencies.py  prediction_graph.py
src/models/: predictor.py
test/: test.py  test_graph.py  test_inference_service.py  test_pipeline.py  test_predict.py
utils/: metrics.py
(+19 files in other folders)
