[project]
name = "agentic-climate-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "fastapi>=0.136.3",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "optuna>=4.9.0",
    "orjson>=3.11.9",
    "pandas>=2.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "shap>=0.52.0",
    "starlette>=1.2.1",
    "streamlit>=1.58.0",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.48.0",
    "xgboost>=3.0.0",
]
